fixed minor color contrast issues on homepage

--- a/assets/sass/_boxes.scss
+++ b/assets/sass/_boxes.scss
@@ -63,7 +63,6 @@
   }
 
   &__subtitle {
-    color: #9b9b9b;
     line-height: 1.3;
   }
 
