--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -16,5 +16,7 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    color: #0371b7;
   }
 }
